Added some hover effects

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </div>
     </section>
     <section id="menu" class="fullWidth">
-      <div class="row">
-        <nav data-topbar class="top-bar sticky">
+      <div class="sticky contain-to-grid">
+        <nav data-topbar class="top-bar">
           <ul class="title-area">
             <li class="name">
               <h1>Текстиль в Интерьере</h1>
@@ -58,37 +58,31 @@
     <section id="content" class="fullWidth content">
       <div class="row">
         <div class="large-12 medium-12 small-12 columns">
-          <h1 class="text-center up">Наши услуги</h1>
+          <h1 class="text-center up">Разделы</h1>
         </div>
         <div class="large-4 medium-6 small-12 columns">
-          <div class="point">
-            <h2 class="text-center">Sample block</h2>
-          </div>
+          <div class="point"><a href="#" class="darken"></a><a href="#">
+              <h2 class="text-center">Текстиль</h2></a></div>
         </div>
         <div class="large-4 medium-6 small-12 columns">
-          <div class="point">
-            <h2 class="text-center">Sample block</h2>
-          </div>
+          <div class="point"><a href="#" class="darken"></a><a href="#">
+              <h2 class="text-center">Шторы</h2></a></div>
         </div>
         <div class="large-4 medium-6 small-12 columns">
-          <div class="point">
-            <h2 class="text-center">Sample block</h2>
-          </div>
+          <div class="point"><a href="#" class="darken"></a><a href="#">
+              <h2 class="text-center">Чехлы</h2></a></div>
         </div>
         <div class="large-4 medium-6 small-12 columns">
-          <div class="point">
-            <h2 class="text-center">Sample block</h2>
-          </div>
+          <div class="point"><a href="#" class="darken"></a><a href="#">
+              <h2 class="text-center">Подушки</h2></a></div>
         </div>
         <div class="large-4 medium-6 small-12 columns">
-          <div class="point">
-            <h2 class="text-center">Sample block</h2>
-          </div>
+          <div class="point"><a href="#" class="darken"></a><a href="#">
+              <h2 class="text-center">Скатерти</h2></a></div>
         </div>
         <div class="large-4 medium-6 small-12 columns">
-          <div class="point">
-            <h2 class="text-center">Sample block</h2>
-          </div>
+          <div class="point"><a href="#" class="darken"></a><a href="#">
+              <h2 class="text-center">Штучки</h2></a></div>
         </div>
       </div>
     </section>
