--- a/index.html
+++ b/index.html
@@ -20,25 +20,27 @@
     <script>new WOW().init()</script>
   </head>
   <body id="top">
-    <section id="logo" class="fullWidth">
-      <div class="row">
-        <div class="small-12 columns">
-          <!--h1.up.text-center Logo--><img src="images/Logo_new.png">
+    <section class="fullWidth spacer">
+      <div id="logo">
+        <div class="row">
+          <div class="small-12 columns">
+            <!--h1.up.text-center Logo--><img src="images/Logo_new.png">
+          </div>
         </div>
       </div>
     </section>
     <section id="menu" class="fullWidth">
       <div class="sticky contain-to-grid">
-        <nav data-topbar class="top-bar">
+        <nav data-topbar role="navigation" class="top-bar">
           <ul class="title-area">
             <li class="name">
               <h1>Текстиль в Интерьере</h1>
             </li>
-            <li class="toggle-topbar menu-icon"><a href="#">Меню</a></li>
+            <li class="toggle-topbar menu-icon"><a href="#"> <span>Меню</span></a></li>
           </ul>
           <section class="top-bar-section">
             <ul class="right">
-              <li><a href="#">Главная</a></li>
+              <li><a href="#footer">Главная</a></li>
               <li class="divider"></li>
               <li><a href="#">Портфолио</a></li>
               <li class="divider"></li>
@@ -54,7 +56,6 @@
         </nav>
       </div>
     </section>
-    <section class="fullWidth spacer"></section>
     <section id="content" class="fullWidth content">
       <div class="row">
         <div class="large-12 medium-12 small-12 columns">
@@ -83,6 +84,39 @@
         <div class="large-4 medium-6 small-12 columns">
           <div class="point"><a href="#" class="darken"></a><a href="#">
               <h2 class="text-center">Штучки</h2></a></div>
+        </div>
+      </div>
+    </section>
+    <section id="footer" class="fullWidth">
+      <div class="row">
+        <div class="large-offset-2 medium-offset-1 large-8 medium-10 small-12 columns">
+          <div class="row">
+            <div class="large-6 medium-6 small-12 columns">
+              <div class="row"> 
+                <div class="large-12 columns">
+                  <h5 class="text-left">На сайте:</h5>
+                </div>
+                <div class="large-6 medium-6 small-6 columns">
+                  <ul class="map">
+                    <li><a href="#">Ссылка</a></li>
+                    <li><a href="#">Ссылка</a></li>
+                    <li><a href="#">Ссылка</a></li>
+                    <li><a href="#">Ссылка</a></li>
+                    <li><a href="#">Ссылка</a></li>
+                  </ul>
+                </div>
+                <div class="large-6 medium-6 small-6 columns">
+                  <ul class="map">
+                    <li><a href="#">Ссылка</a></li>
+                    <li><a href="#">Ссылка</a></li>
+                    <li><a href="#">Ссылка</a></li>
+                    <li><a href="#">Ссылка</a></li>
+                    <li><a href="#">Ссылка</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
