--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <!--FAVICON-->
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!--STYLESHEETS-->
-    <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/app.css">
+    <!--FONT-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
     <!--ANIMATE WOW-->
     <link rel="stylesheet" href="stylesheets/animate.css">
     <!--MODERNIZR-->
@@ -20,29 +21,20 @@
     <script>new WOW().init()</script>
   </head>
   <body id="top">
-    <section class="fullWidth spacer">
-      <div id="logo">
-        <div class="row">
-          <div class="small-12 columns">
-            <!--h1.up.text-center Logo--><img src="images/Logo_new.png">
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="menu" class="fullWidth">
+    <div id="menu">
       <div class="sticky contain-to-grid">
         <nav data-topbar role="navigation" class="top-bar">
           <ul class="title-area">
-            <li class="name">
-              <h1>Текстиль в Интерьере</h1>
+            <li class="name"><img id="logo" src="images/Logo_shadow.png"><img id="logotype" src="images/Logotype.png">
+              <!--h1 Текстиль в Интерьере-->
             </li>
-            <li class="toggle-topbar menu-icon"><a href="#"> <span>Меню</span></a></li>
+            <li onclick="checkTop()" class="toggle-topbar menu-icon"><a href="#"> <span>Меню</span></a></li>
           </ul>
           <section class="top-bar-section">
             <ul class="right">
-              <li><a href="#footer">Главная</a></li>
+              <li><a href="index.html">Главная</a></li>
               <li class="divider"></li>
-              <li><a href="#">Портфолио</a></li>
+              <li><a href="portfolio.html">Портфолио</a></li>
               <li class="divider"></li>
               <li><a href="#">Эскизы</a></li>
               <li class="divider"></li>
@@ -55,6 +47,23 @@
           </section>
         </nav>
       </div>
+    </div>
+    <section class="fullWidth header">
+      <!--#logo
+      //.row
+        //.small-12.columns
+          //h1.up.text-center Logo
+          //img(src = "images/Logo_new.png")
+      -->
+      <!--.logo
+      img(src = "images/Logo_shadow.png")
+      
+      -->
+      <div class="intro">
+        <!--h2.text-left Здравствуй!-->
+        <!--h3.text-left Я - дизайнер-декоратор Наталья Сердич.-->
+        <p class="text-justify">Текстиль играет важнейшую роль в создании красивого и стильного интерьера. Шторы и гардины, покрывала и скатерти, мебельные чехлы и подушки, оригинальные дизайнерские штучки – без них невозможно представить уютный дом. Они привносят особое настроение и тепло, а также являются неотъемлемой составляющей выбранного стиля.</p>
+      </div>
     </section>
     <section id="content" class="fullWidth content">
       <div class="row">
@@ -62,31 +71,38 @@
           <h1 class="text-center up">Разделы</h1>
         </div>
         <div class="large-4 medium-6 small-12 columns">
-          <div class="point"><a href="#" class="darken"></a><a href="#">
-              <h2 class="text-center">Текстиль</h2></a></div>
+          <div id="item1" class="point"><a href="#" class="description">
+              <h3 class="text-center name">Текстиль в интерьере</h3>
+              <p>Декоративный текстиль: шторы, ковры, чехлы для мебели, скатерти, подушки,  покрывала и другие прекрасные мелочи создадут неповторимую атмосферу вашего дома и подчеркнут чувство стиля своего хозяина.</p></a></div>
         </div>
         <div class="large-4 medium-6 small-12 columns">
-          <div class="point"><a href="#" class="darken"></a><a href="#">
-              <h2 class="text-center">Шторы</h2></a></div>
+          <div id="item2" class="point"><a href="#" class="description">
+              <h3 class="text-center name">Шторы на заказ</h3>
+              <p>Подобранные со вкусом декоративные ткани и профессионально сшитые из них шторы,  изящные карнизы и всевозможные аксессуары подчеркнут выбранный стиль и придадут дизайнерским решениям законченность.</p></a></div>
         </div>
         <div class="large-4 medium-6 small-12 columns">
-          <div class="point"><a href="#" class="darken"></a><a href="#">
-              <h2 class="text-center">Чехлы</h2></a></div>
+          <div id="item3" class="point"><a href="#" class="description">
+              <h3 class="text-center name">Ткани</h3>
+              <p>Декоративные ткани играют важнейшую роль в современном интерьере. Сочетая в себе психологию цвета, рисунка и фактуры, ткани не только украшают, но и вносят в интерьер особую атмосферу.</p></a></div>
         </div>
         <div class="large-4 medium-6 small-12 columns">
-          <div class="point"><a href="#" class="darken"></a><a href="#">
-              <h2 class="text-center">Подушки</h2></a></div>
+          <div id="item4" class="point"><a href="#" class="description">
+              <h3 class="text-center name">Карнизы и аксессуары</h3>
+              <p>Карнизы для штор являются важным элементом при оформлении окон. А всевозможные аксессуары придают шторам роскошный вид и вносят в общую композицию художественный изыск и очарование. </p></a></div>
         </div>
         <div class="large-4 medium-6 small-12 columns">
-          <div class="point"><a href="#" class="darken"></a><a href="#">
-              <h2 class="text-center">Скатерти</h2></a></div>
+          <div id="item5" class="point"><a href="#" class="description">
+              <h3 class="text-center name">Солнцезащитные системы</h3>
+              <p>Солнцезащитные системы - это современный и лаконичный вариант оформления окон и интерьера в целом. К солнцезащитным системам относятся разнообразные жалюзи (из алюминия, пластика, дерева, бамбука), а также рулонные шторы, шторы-плиссе, шторы из бамбука...</p></a></div>
         </div>
         <div class="large-4 medium-6 small-12 columns">
-          <div class="point"><a href="#" class="darken"></a><a href="#">
-              <h2 class="text-center">Штучки</h2></a></div>
+          <div id="item6" class="point"><a href="#" class="description">
+              <h3 class="text-center name">Штучки</h3>
+              <p>В современных интерьерах всего две-три дизайнерские вещи создают особую атмосферу. Неповторимые дизайнерские штучки внесут шарм  и наполнят ваш дом уютом и теплом.</p></a></div>
         </div>
       </div>
     </section>
+    <section id="spacer" class="fullWidth"></section>
     <section id="footer" class="fullWidth">
       <div class="row">
         <div class="large-offset-2 medium-offset-1 large-8 medium-10 small-12 columns">
@@ -126,7 +142,7 @@
     <!--JQUERY EASING-->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <!--FOUNDATION-->
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="bower_components/foundation/js/foundation.js"></script>
     <!--APP-->
     <script src="js/app.js"></script>
   </body>
