--- a/index.html
+++ b/index.html
@@ -33,15 +33,9 @@
           <section class="top-bar-section">
             <ul class="right">
               <li><a href="index.html">Главная</a></li>
-              <li class="divider"></li>
               <li><a href="portfolio.html">Портфолио</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Эскизы</a></li>
-              <li class="divider"></li>
               <li><a href="#">Услуги</a></li>
-              <li class="divider"></li>
               <li><a href="#">Блог</a></li>
-              <li class="divider"></li>
               <li><a href="#">Контакты</a></li>
             </ul>
           </section>
@@ -56,7 +50,7 @@
           //img(src = "images/Logo_new.png")
       -->
       <!--.logo
-      img(src = "images/Logo_shadow.png")
+      //img(src = "images/Logo_shadow.png")
       
       -->
       <div class="intro">
@@ -102,7 +96,7 @@
         </div>
       </div>
     </section>
-    <section id="spacer" class="fullWidth"></section>
+    <!--section.fullWidth#spacer-->
     <section id="footer" class="fullWidth">
       <div class="row">
         <div class="large-offset-2 medium-offset-1 large-8 medium-10 small-12 columns">
@@ -114,7 +108,7 @@
                 </div>
                 <div class="large-6 medium-6 small-6 columns">
                   <ul class="map">
-                    <li><a href="#">Ссылка</a></li>
+                    <li><a href="index.html">Ссылка</a></li>
                     <li><a href="#">Ссылка</a></li>
                     <li><a href="#">Ссылка</a></li>
                     <li><a href="#">Ссылка</a></li>
