--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
               <li><a href="portfolio.html">Портфолио</a></li>
               <li><a href="#">Услуги</a></li>
               <li><a href="#">Блог</a></li>
-              <li><a href="#">Контакты</a></li>
             </ul>
           </section>
         </nav>
@@ -104,25 +103,7 @@
             <div class="large-6 medium-6 small-12 columns">
               <div class="row"> 
                 <div class="large-12 columns">
-                  <h5 class="text-left">На сайте:</h5>
-                </div>
-                <div class="large-6 medium-6 small-6 columns">
-                  <ul class="map">
-                    <li><a href="index.html">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                  </ul>
-                </div>
-                <div class="large-6 medium-6 small-6 columns">
-                  <ul class="map">
-                    <li><a href="#">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                  </ul>
+                  <h4 class="text-center"> </h4>
                 </div>
               </div>
             </div>
@@ -139,5 +120,6 @@
     <script src="bower_components/foundation/js/foundation.js"></script>
     <!--APP-->
     <script src="js/app.js"></script>
+    <script>jQuery(document).ready(function($) {$(window).trigger('resize');});</script>
   </body>
 </html>
