--- a/portfolio.html
+++ b/portfolio.html
@@ -78,31 +78,80 @@
         </div>
         <div id="1" class="medium-6 small-12 columns">
           <h2 data-magellan-destination="1" class="text-left">Гостинные</h2><a name="1"></a>
-          <div class="slider"></div>
+          <div class="slider slideshow-wrapper">
+            <div class="preloader"></div>
+            <ul data-orbit class="example-orbit">
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+            </ul>
+          </div>
         </div>
         <div id="2" class="medium-6 small-12 columns">
           <h2 data-magellan-destination="2" class="text-left">Спальни</h2><a name="2"></a>
-          <div class="slider"></div>
+          <div class="slider slideshow-wrapper">
+            <div class="preloader"></div>
+            <ul data-orbit class="example-orbit">
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+            </ul>
+          </div>
         </div>
         <div id="3" class="medium-6 small-12 columns">
           <h2 data-magellan-destination="3" class="text-left">Кухни</h2><a name="3"></a>
-          <div class="slider"></div>
+          <div class="slider slideshow-wrapper">
+            <div class="preloader"></div>
+            <ul data-orbit class="example-orbit">
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+            </ul>
+          </div>
         </div>
         <div id="4" class="medium-6 small-12 columns">
           <h2 data-magellan-destination="4" class="text-left">Детские</h2><a name="4"></a>
-          <div class="slider"></div>
+          <div class="slider slideshow-wrapper">
+            <div class="preloader"></div>
+            <ul data-orbit class="example-orbit">
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+            </ul>
+          </div>
         </div>
         <div id="5" class="medium-6 small-12 columns">
           <h2 data-magellan-destination="5" class="text-left">Кабинеты</h2><a name="5"></a>
-          <div class="slider"></div>
+          <div class="slider slideshow-wrapper">
+            <div class="preloader"></div>
+            <ul data-orbit class="example-orbit">
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+            </ul>
+          </div>
         </div>
         <div id="7" class="medium-6 small-12 columns">
           <h2 data-magellan-destination="6" class="text-left">Разное</h2><a name="6"></a>
-          <div class="slider"></div>
+          <div class="slider slideshow-wrapper">
+            <div class="preloader"></div>
+            <ul data-orbit class="example-orbit">
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+            </ul>
+          </div>
         </div>
         <div id="6" class="medium-12 small-12 columns">
           <h2 data-magellan-destination="7" class="text-left">Эскизы</h2><a name="7"></a>
-          <div class="slider"></div>
+          <div class="slider slideshow-wrapper">
+            <div class="preloader"></div>
+            <ul data-orbit class="example-orbit">
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
@@ -147,8 +196,10 @@
     <!--FOUNDATION-->
     <script src="bower_components/foundation/js/foundation.js"></script>
     <!--MAGELLAN-->
-    <!--script(src = "bower_components/foundation/js/foundation.magellan.js")-->
+    <script src="bower_components/foundation/js/foundation.magellan.js"></script>
+    <script src="bower_components/foundation/js/foundation.orbit.js"></script>
     <!--APP-->
     <script src="js/app.js"></script>
+    <script>jQuery(document).ready(function($) {$(window).trigger('resize');});</script>
   </body>
 </html>
