--- a/index.html
+++ b/index.html
@@ -97,18 +97,20 @@
     </section>
     <!--section.fullWidth#spacer-->
     <section id="footer" class="fullWidth">
-      <div class="row">
-        <div class="large-offset-2 medium-offset-1 large-8 medium-10 small-12 columns">
-          <div class="row">
-            <div class="large-6 medium-6 small-12 columns">
-              <div class="row"> 
-                <div class="large-12 columns">
-                  <h4 class="text-center"> </h4>
-                </div>
+      <div class="small-12 columns">
+        <div class="row">
+          <div class="large-offset-2 medium-offset-1 large-8 medium-10 small-12 columns">
+            <div class="row">
+              <div class="small-12 columns">
+                <h4>© 2002 - 2015   Наталья Сердич - частный дизайнер декоратор.</h4>
+                <h5>Телефон: 8 (916) 643-97-05    Email: serdichn@gmail.com</h5>
               </div>
             </div>
           </div>
         </div>
+      </div>
+      <div class="small-12 columns copyright">
+        <h6>© Copyright | Site design and brand identity - Tim Surkov</h6>
       </div>
     </section>
     <!--SCRIPTS-->
