Changed Header style and added images to portfolio

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--TITLE-->
-    <title>Hey bros</title>
+    <title>Текстиль в Интерьере</title>
     <!--FAVICON-->
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!--STYLESHEETS-->
     <link rel="stylesheet" href="stylesheets/app.css">
     <!--FONT-->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
     <!--ANIMATE WOW-->
     <link rel="stylesheet" href="stylesheets/animate.css">
     <!--MODERNIZR-->
@@ -41,54 +41,63 @@
         </nav>
       </div>
     </div>
-    <section class="fullWidth header">
-      <!--#logo
-      //.row
-        //.small-12.columns
-          //h1.up.text-center Logo
-          //img(src = "images/Logo_new.png")
-      -->
-      <!--.logo
-      //img(src = "images/Logo_shadow.png")
+    <header>
+      <div class="blur-bg"></div>
+      <div class="fullWidth wow fadeInUp">
+        <div class="small-12 columns intro">
+          <h1 class="title bold up">Здравствуйте!</h1>
+        </div>
+        <div class="small-12 columns intro">
+          <hr>
+        </div>
+        <div class="small-12 columns intro">
+          <h2 class="title bold up">Меня зовут Наталья Сердич</h2>
+        </div>
+        <div class="small-12 columns intro">
+          <h3 class="bold">Я – частный декоратор интерьеров</h3>
+        </div>
+        <div class="small-12 columns intro">
+          <h5 class="narrow"><br><br>В этой области я работаю с 2000 года и люблю то, чем занимаюсь. <br> Многолетний опыт позволяет мне с уверенностью браться за самые оригинальные проекты.<br>В создании красивого и стильного интерьера декоративный текстиль играет важную роль.<br>Шторы, покрывала, скатерти, мебельные чехлы, оригинальные дизайнерские штучки <br> создают особое настроение и являются неотъемлемой составляющей выбранного стиля.<br>Расскажите о своих пожеланиях, и мы вместе создадим пространство вашей мечты! </h5>
+        </div>
+      </div>
+      <!--.intro
+      //h3.text-left Здравствуйте!
+      //p.text-left  Меня зовут Наталья Сердич. Я – частный декоратор интерьеров. В этой области я работаю с 2000 года и люблю то, чем занимаюсь. Многолетний опыт позволяет мне с уверенностью браться за самые оригинальные проекты.<br>В создании красивого и стильного интерьера декоративный текстиль играет важную роль. Шторы, покрывала, скатерти, мебельные чехлы, оригинальные дизайнерские штучки создают особое настроение и являются неотъемлемой составляющей выбранного стиля. Расскажите о своих пожеланиях, и мы вместе создадим пространство вашей мечты! 
       
       -->
-      <div class="intro">
-        <!--h2.text-left Здравствуй!-->
-        <!--h3.text-left Я - дизайнер-декоратор Наталья Сердич.-->
-        <p class="text-justify">Текстиль играет важнейшую роль в создании красивого и стильного интерьера. Шторы и гардины, покрывала и скатерти, мебельные чехлы и подушки, оригинальные дизайнерские штучки – без них невозможно представить уютный дом. Они привносят особое настроение и тепло, а также являются неотъемлемой составляющей выбранного стиля.</p>
-      </div>
-    </section>
+    </header>
     <section id="content" class="fullWidth content">
       <div class="row">
-        <div class="large-12 medium-12 small-12 columns">
-          <h1 class="text-center up">Разделы</h1>
+        <div class="large-12 medium-12 small-12 columns wow fadeInUp">
+          <h1 class="text-center bold up">Разделы</h1>
+          <hr class="grey">
         </div>
-        <div class="large-4 medium-6 small-12 columns">
+        <div class="large-4 medium-6 small-12 columns wow fadeInUp">
           <div id="item1" class="point"><a href="#" class="description">
               <h3 class="text-center name">Текстиль в интерьере</h3>
               <p>Декоративный текстиль: шторы, ковры, чехлы для мебели, скатерти, подушки,  покрывала и другие прекрасные мелочи создадут неповторимую атмосферу вашего дома и подчеркнут чувство стиля своего хозяина.</p></a></div>
         </div>
-        <div class="large-4 medium-6 small-12 columns">
+        <div class="large-4 medium-6 small-12 columns wow fadeInUp">
           <div id="item2" class="point"><a href="#" class="description">
               <h3 class="text-center name">Шторы на заказ</h3>
               <p>Подобранные со вкусом декоративные ткани и профессионально сшитые из них шторы,  изящные карнизы и всевозможные аксессуары подчеркнут выбранный стиль и придадут дизайнерским решениям законченность.</p></a></div>
         </div>
-        <div class="large-4 medium-6 small-12 columns">
+        <div class="large-4 medium-6 small-12 columns wow fadeInUp">
           <div id="item3" class="point"><a href="#" class="description">
               <h3 class="text-center name">Ткани</h3>
               <p>Декоративные ткани играют важнейшую роль в современном интерьере. Сочетая в себе психологию цвета, рисунка и фактуры, ткани не только украшают, но и вносят в интерьер особую атмосферу.</p></a></div>
         </div>
-        <div class="large-4 medium-6 small-12 columns">
+        <div class="large-4 medium-6 small-12 columns wow fadeInUp">
           <div id="item4" class="point"><a href="#" class="description">
               <h3 class="text-center name">Карнизы и аксессуары</h3>
               <p>Карнизы для штор являются важным элементом при оформлении окон. А всевозможные аксессуары придают шторам роскошный вид и вносят в общую композицию художественный изыск и очарование. </p></a></div>
         </div>
-        <div class="large-4 medium-6 small-12 columns">
+        <div class="large-4 medium-6 small-12 columns wow fadeInUp">
           <div id="item5" class="point"><a href="#" class="description">
               <h3 class="text-center name">Солнцезащитные системы</h3>
               <p>Солнцезащитные системы - это современный и лаконичный вариант оформления окон и интерьера в целом. К солнцезащитным системам относятся разнообразные жалюзи (из алюминия, пластика, дерева, бамбука), а также рулонные шторы, шторы-плиссе, шторы из бамбука...</p></a></div>
         </div>
-        <div class="large-4 medium-6 small-12 columns">
+        <div class="large-4 medium-6 small-12 columns wow fadeInUp">
           <div id="item6" class="point"><a href="#" class="description">
               <h3 class="text-center name">Штучки</h3>
               <p>В современных интерьерах всего две-три дизайнерские вещи создают особую атмосферу. Неповторимые дизайнерские штучки внесут шарм  и наполнят ваш дом уютом и теплом.</p></a></div>
@@ -97,14 +106,12 @@
     </section>
     <!--section.fullWidth#spacer-->
     <section id="footer" class="fullWidth">
-      <div class="small-12 columns">
-        <div class="row">
-          <div class="large-offset-2 medium-offset-1 large-8 medium-10 small-12 columns">
-            <div class="row">
-              <div class="small-12 columns">
-                <h4>© 2002 - 2015   Наталья Сердич - частный дизайнер декоратор.</h4>
-                <h5>Телефон: 8 (916) 643-97-05    Email: serdichn@gmail.com</h5>
-              </div>
+      <div class="row">
+        <div class="large-offset-2 medium-offset-1 large-8 medium-10 small-12 columns">
+          <div class="row">
+            <div class="small-12 columns">
+              <h4>© 2002 - 2015   Наталья Сердич - частный дизайнер декоратор.</h4>
+              <h5>Телефон: 8 (916) 643-97-05    Email: serdichn@gmail.com</h5>
             </div>
           </div>
         </div>
@@ -122,6 +129,8 @@
     <script src="bower_components/foundation/js/foundation.js"></script>
     <!--APP-->
     <script src="js/app.js"></script>
+    <!--SCROLL EFFETCS-->
+    <script src="js/scroll.js"></script>
     <script>jQuery(document).ready(function($) {$(window).trigger('resize');});</script>
   </body>
 </html>
