--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--TITLE-->
-    <title>Hey bros</title>
+    <title>Текстиль в Интерьере</title>
     <!--FAVICON-->
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!--STYLESHEETS-->
@@ -41,32 +41,36 @@
         </nav>
       </div>
     </div>
-    <section class="fullWidth header">
-      <!--#logo
-      //.row
-        //.small-12.columns
-          //h1.up.text-center Logo
-          //img(src = "images/Logo_new.png")
-      -->
-      <!--.logo
-      img(src = "images/Logo_shadow.png")
-      
-      -->
-      <div class="intro">
-        <!--h2.text-left Здравствуй!-->
-        <!--h3.text-left Я - дизайнер-декоратор Наталья Сердич.-->
-        <p class="text-justify">Текстиль играет важнейшую роль в создании красивого и стильного интерьера. Шторы и гардины, покрывала и скатерти, мебельные чехлы и подушки, оригинальные дизайнерские штучки – без них невозможно представить уютный дом. Они привносят особое настроение и тепло, а также являются неотъемлемой составляющей выбранного стиля.</p>
+    <header>
+      <div class="blur-bg"></div>
+      <div class="fullWidth wow fadeInUp">
+        <div class="small-12 columns intro">
+          <h1 class="title bold up"><br>Портфолио</h1>
+        </div>
+        <div class="small-12 columns intro">
+          <hr>
+        </div>
+        <div class="small-12 columns intro">
+          <h2 class="title bold up"> </h2>
+        </div>
+        <div class="small-12 columns intro">
+          <h3 class="bold">Здесь вы найдете мои работы</h3>
+        </div>
+        <div class="small-12 columns intro">
+          <h5 class="narrow"> </h5>
+        </div>
       </div>
-    </section>
+    </header>
     <section class="fullWidth portfolio">
       <div class="row">
         <div class="large-12 medium-12 small-12 columns">
-          <h1 class="text-center up">Разделы</h1>
+          <h1 class="text-center bold up">Разделы</h1>
+          <hr class="grey">
         </div>
         <div class="small-12 columns">
           <div data-magellan-expedition="fixed">
             <dl class="sub-nav">
-              <dd data-magellan-arrival="1"><a href="#1">Гостинные</a></dd>
+              <dd data-magellan-arrival="1"><a href="#1">Гостиные</a></dd>
               <dd data-magellan-arrival="2"><a href="#2">Спальни</a></dd>
               <dd data-magellan-arrival="3"><a href="#3">Кухни</a></dd>
               <dd data-magellan-arrival="4"><a href="#4">Детские</a></dd>
@@ -76,8 +80,75 @@
             </dl>
           </div>
         </div>
-        <div id="1" class="medium-6 small-12 columns">
-          <h2 data-magellan-destination="1" class="text-left">Гостинные</h2><a name="1"></a>
+        <div id="1" class="large-6 small-12 columns">
+          <h2 data-magellan-destination="1" class="text-left bold">Гостиные</h2><a name="1"></a>
+          <div class="slider slideshow-wrapper">
+            <div class="preloader"></div>
+            <ul data-orbit class="example-orbit">
+              <li><img src="images/gallery/livingRoom/l1.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l2.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l3.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l4.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l5.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l6.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l7.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l8.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l9.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l10.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l11.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l12.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l13.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l14.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l15.jpg" alt=""></li>
+              <li><img src="images/gallery/livingRoom/l16.jpg" alt=""></li>
+            </ul>
+          </div>
+        </div>
+        <div id="2" class="large-6 small-12 columns">
+          <h2 data-magellan-destination="2" class="text-left bold">Спальни</h2><a name="2"></a>
+          <div class="slider slideshow-wrapper">
+            <div class="preloader"></div>
+            <ul data-orbit class="example-orbit">
+              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/textile2.jpg" alt=""></li>
+            </ul>
+          </div>
+        </div>
+        <div id="3" class="large-6 small-12 columns">
+          <h2 data-magellan-destination="3" class="text-left bold">Кухни</h2><a name="3"></a>
+          <div class="slider slideshow-wrapper">
+            <div class="preloader"></div>
+            <ul data-orbit class="example-orbit">
+              <li><img src="images/gallery/kitchen/k1.jpg" alt=""></li>
+              <li><img src="images/gallery/kitchen/k2.jpg" alt=""></li>
+              <li><img src="images/gallery/kitchen/k3.jpg" alt=""></li>
+              <li><img src="images/gallery/kitchen/k4.jpg" alt=""></li>
+              <li><img src="images/gallery/kitchen/k5.jpg" alt=""></li>
+              <li><img src="images/gallery/kitchen/k6.jpg" alt=""></li>
+              <li><img src="images/gallery/kitchen/k7.jpg" alt=""></li>
+              <li><img src="images/gallery/kitchen/k8.jpg" alt=""></li>
+              <li><img src="images/gallery/kitchen/k9.jpg" alt=""></li>
+            </ul>
+          </div>
+        </div>
+        <div id="4" class="large-6 small-12 columns">
+          <h2 data-magellan-destination="4" class="text-left bold">Детские</h2><a name="4"></a>
+          <div class="slider slideshow-wrapper">
+            <div class="preloader"></div>
+            <ul data-orbit class="example-orbit">
+              <li><img src="images/gallery/childrensRoom/c1.jpg" alt=""></li>
+              <li><img src="images/gallery/childrensRoom/c2.jpg" alt=""></li>
+              <li><img src="images/gallery/childrensRoom/c3.jpg" alt=""></li>
+              <li><img src="images/gallery/childrensRoom/c4.jpg" alt=""></li>
+              <li><img src="images/gallery/childrensRoom/c5.jpg" alt=""></li>
+              <li><img src="images/gallery/childrensRoom/c6.jpg" alt=""></li>
+              <li><img src="images/gallery/childrensRoom/c7.jpg" alt=""></li>
+              <li><img src="images/gallery/childrensRoom/c8.jpg" alt=""></li>
+            </ul>
+          </div>
+        </div>
+        <div id="5" class="large-6 small-12 columns">
+          <h2 data-magellan-destination="5" class="text-left bold">Кабинеты</h2><a name="5"></a>
           <div class="slider slideshow-wrapper">
             <div class="preloader"></div>
             <ul data-orbit class="example-orbit">
@@ -87,8 +158,8 @@
             </ul>
           </div>
         </div>
-        <div id="2" class="medium-6 small-12 columns">
-          <h2 data-magellan-destination="2" class="text-left">Спальни</h2><a name="2"></a>
+        <div id="6" class="large-6 small-12 columns">
+          <h2 data-magellan-destination="6" class="text-left bold">Разное</h2><a name="6"></a>
           <div class="slider slideshow-wrapper">
             <div class="preloader"></div>
             <ul data-orbit class="example-orbit">
@@ -98,52 +169,8 @@
             </ul>
           </div>
         </div>
-        <div id="3" class="medium-6 small-12 columns">
-          <h2 data-magellan-destination="3" class="text-left">Кухни</h2><a name="3"></a>
-          <div class="slider slideshow-wrapper">
-            <div class="preloader"></div>
-            <ul data-orbit class="example-orbit">
-              <li><img src="images/textile2.jpg" alt=""></li>
-              <li><img src="images/textile2.jpg" alt=""></li>
-              <li><img src="images/textile2.jpg" alt=""></li>
-            </ul>
-          </div>
-        </div>
-        <div id="4" class="medium-6 small-12 columns">
-          <h2 data-magellan-destination="4" class="text-left">Детские</h2><a name="4"></a>
-          <div class="slider slideshow-wrapper">
-            <div class="preloader"></div>
-            <ul data-orbit class="example-orbit">
-              <li><img src="images/textile2.jpg" alt=""></li>
-              <li><img src="images/textile2.jpg" alt=""></li>
-              <li><img src="images/textile2.jpg" alt=""></li>
-            </ul>
-          </div>
-        </div>
-        <div id="5" class="medium-6 small-12 columns">
-          <h2 data-magellan-destination="5" class="text-left">Кабинеты</h2><a name="5"></a>
-          <div class="slider slideshow-wrapper">
-            <div class="preloader"></div>
-            <ul data-orbit class="example-orbit">
-              <li><img src="images/textile2.jpg" alt=""></li>
-              <li><img src="images/textile2.jpg" alt=""></li>
-              <li><img src="images/textile2.jpg" alt=""></li>
-            </ul>
-          </div>
-        </div>
-        <div id="7" class="medium-6 small-12 columns">
-          <h2 data-magellan-destination="6" class="text-left">Разное</h2><a name="6"></a>
-          <div class="slider slideshow-wrapper">
-            <div class="preloader"></div>
-            <ul data-orbit class="example-orbit">
-              <li><img src="images/textile2.jpg" alt=""></li>
-              <li><img src="images/textile2.jpg" alt=""></li>
-              <li><img src="images/textile2.jpg" alt=""></li>
-            </ul>
-          </div>
-        </div>
-        <div id="6" class="medium-12 small-12 columns">
-          <h2 data-magellan-destination="7" class="text-left">Эскизы</h2><a name="7"></a>
+        <div id="7" class="large-12 small-12 columns">
+          <h2 data-magellan-destination="7" class="text-left bold">Эскизы</h2><a name="7"></a>
           <div class="slider slideshow-wrapper">
             <div class="preloader"></div>
             <ul data-orbit class="example-orbit">
@@ -159,33 +186,15 @@
       <div class="row">
         <div class="large-offset-2 medium-offset-1 large-8 medium-10 small-12 columns">
           <div class="row">
-            <div class="large-6 medium-6 small-12 columns">
-              <div class="row"> 
-                <div class="large-12 columns">
-                  <h5 class="text-left">На сайте:</h5>
-                </div>
-                <div class="large-6 medium-6 small-6 columns">
-                  <ul class="map">
-                    <li><a href="index.html">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                  </ul>
-                </div>
-                <div class="large-6 medium-6 small-6 columns">
-                  <ul class="map">
-                    <li><a href="#">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                    <li><a href="#">Ссылка</a></li>
-                  </ul>
-                </div>
-              </div>
+            <div class="small-12 columns">
+              <h4>© 2002 - 2015   Наталья Сердич - частный дизайнер декоратор.</h4>
+              <h5>Телефон: 8 (916) 643-97-05    Email: serdichn@gmail.com</h5>
             </div>
           </div>
         </div>
+      </div>
+      <div class="small-12 columns copyright">
+        <h6>© Copyright | Site design and brand identity - Tim Surkov</h6>
       </div>
     </section>
     <!--SCRIPTS-->
@@ -200,6 +209,8 @@
     <script src="bower_components/foundation/js/foundation.orbit.js"></script>
     <!--APP-->
     <script src="js/app.js"></script>
+    <!--SCROLL EFFETCS-->
+    <script src="js/scroll.js"></script>
     <script>jQuery(document).ready(function($) {$(window).trigger('resize');});</script>
   </body>
 </html>
