Added images to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -166,9 +166,17 @@
           <div class="slider slideshow-wrapper">
             <div class="preloader"></div>
             <ul data-orbit class="example-orbit">
-              <li><img src="images/textile2.jpg" alt=""></li>
-              <li><img src="images/textile2.jpg" alt=""></li>
-              <li><img src="images/textile2.jpg" alt=""></li>
+              <li><img src="images/gallery/misc/m0.jpg" alt=""></li>
+              <li><img src="images/gallery/misc/m1.jpg" alt=""></li>
+              <li><img src="images/gallery/misc/m2.jpg" alt=""></li>
+              <li><img src="images/gallery/misc/m3.jpg" alt=""></li>
+              <li><img src="images/gallery/misc/m4.jpg" alt=""></li>
+              <li><img src="images/gallery/misc/m5.jpg" alt=""></li>
+              <li><img src="images/gallery/misc/m6.jpg" alt=""></li>
+              <li><img src="images/gallery/misc/m7.jpg" alt=""></li>
+              <li><img src="images/gallery/misc/m8.jpg" alt=""></li>
+              <li><img src="images/gallery/misc/m9.jpg" alt=""></li>
+              <li><img src="images/gallery/misc/m10.jpg" alt=""></li>
             </ul>
           </div>
         </div>
